# hellofastapi

./: .pre-commit-config.yaml  Dockerfile  README.md  calculator.py  compose.yaml  fast_api.py  pyproject.toml  stream_lit.py  test_calculator.py  test_endpoint.py
