[project]
name = "calc-fastapi"
version = "0.1.0"
description = "A simple calculator app using Streamlit and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]
